--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,9 +32,7 @@ tokio = { version = "1", default-features = false, features = [
   "rt-multi-thread",
   "macros"
 ] }
-tokio-util = { version = "0.7.16" }
 futures = { version = "0.3" }
-futures-util = { version = "0.3.31" }
 
 # allocator
 tikv-jemallocator = { version = "0.6", optional = true }
@@ -42,12 +40,10 @@ tikv-jemallocator = { version = "0.6", optional = true }
 # tracing
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
-tracing-futures = "0.2.5"
 
 # metrics
 prometric = { version = "0.1.4", features = ["process"] }
 prometric-derive = { version = "0.1.4" }
-metrics-process = { version = "2.4.0", default-features = false }
 prometheus = "0.14.0"
 
 # indexing
@@ -59,14 +55,10 @@ clickhouse = { git = "https://github.com/ClickHouse/clickhouse-rs", rev = "8cf3d
   "uuid",
   "native-tls"
 ] }
-clickhouse-derive = { version = "0.2.0" }
 time = { version = "0.3.44" }
-redb = { version = "3.1.0" }
 
 # misc
 dotenvy = "0.15.7"
-auto_impl = "1.3.0"
-dyn-clone = "1.0.20"
 hyper = { version = "1.7", features = ["http1", "http2"] }
 axum = { version = "0.8", default-features = false, features = [
   "http1",
@@ -75,13 +67,10 @@ axum = { version = "0.8", default-features = false, features = [
   "tokio",
   "tracing"
 ] }
-tower = "0.5"
-pin-project-lite = "0.2.16"
 wyhash = "0.6.0"
 mime = "0.3"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-serde_bytes = { version = "0.11.19" }
 clap = { version = "4", features = ["derive", "env"] }
 eyre = "0.6"
 thiserror = "2"
@@ -96,9 +85,6 @@ rand = "0.9.2"
 derive_more = { version = "2", features = ["deref"] }
 fdlimit = "0.3.0"
 rayon = "1.11.0"
-
-# Manually override cc version (conflict between alloy-consensus and rbuilder)
-cc = "=1.2.15"
 
 [dev-dependencies]
 tempfile = { version = "3.23.0" }
@@ -190,3 +176,6 @@ rust.rust_2018_idioms = { level = "deny", priority = -1 }
 rust.unreachable_pub = "warn"
 rust.unused_must_use = "deny"
 rustdoc.all = "warn"
+
+[package.metadata.cargo-shear]
+ignored = ["strum"]
