--- a/simulation/azure/haproxy.cfg
+++ b/simulation/azure/haproxy.cfg
@@ -43,7 +43,16 @@ frontend default
 frontend system
   # CHANGE: Allow connections without SNI (IP access) by removing strict-sni
   bind *:5544 ssl crt /usr/local/etc/haproxy/certs/
+
+  # http-request return status 200 content-type application/json string "{\"system_api_port\": 5554}" if { path '/infoz'}
+
   default_backend system_of
+
+frontend system2
+  mode tcp
+  option tcplog
+  bind *:5554 ssl crt /usr/local/etc/haproxy/certs/
+  default_backend system2_backend
 
 frontend prometheus
   bind 0.0.0.0:8405
@@ -67,3 +76,7 @@ backend system_of
   option httpchk GET /livez
   http-check expect status 200
   server system_of1 127.0.0.1:5542 check inter 5s fall 3 rise 1
+
+backend system2_backend
+  mode tcp
+  server system2_server 127.0.0.1:5552 check inter 5s fall 3 rise 1
