--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,14 +15,13 @@ jobs:
     timeout-minutes: 30
     steps:
       - uses: actions/checkout@v5
-      - uses: dtolnay/rust-toolchain@master
-        with:
-          toolchain: 1.89.0
-          components: clippy
+      - name: Install rust-toolchain.toml
+        run: rustup toolchain install --component clippy
       - uses: Swatinem/rust-cache@v2
         with:
           cache-on-failure: true
-      - run: rustup toolchain install nightly-2025-09-21 --component rustfmt
+      - name: Install nightly-2025-09-21 --component rustfmt
+        run: rustup toolchain install nightly-2025-09-21 --component rustfmt
       - run: cargo +nightly-2025-09-21 fmt --all --check
       - run: cargo clippy --examples --tests --benches --all-features --locked
         env:
@@ -33,10 +32,8 @@ jobs:
     timeout-minutes: 30
     steps:
       - uses: actions/checkout@v5
-      - uses: dtolnay/rust-toolchain@master
-        # Need to specify @master above to work with toolchain var
-        with:
-          toolchain: 1.89.0
+      - name: Install rust-toolchain.toml
+        run: rustup toolchain install --component clippy
       - uses: Swatinem/rust-cache@v2
         with:
           cache-on-failure: true
@@ -49,9 +46,8 @@ jobs:
     timeout-minutes: 30
     steps:
       - uses: actions/checkout@v5
-      - uses: dtolnay/rust-toolchain@master
-        with:
-          toolchain: 1.89.0
+      - name: Install rust-toolchain.toml
+        run: rustup toolchain install --component clippy
       - uses: Swatinem/rust-cache@v2
         with:
           cache-on-failure: true
@@ -66,12 +62,9 @@ jobs:
     steps:
       - name: Checkout sources
         uses: actions/checkout@v5
-
       - name: Install cargo-binstall
         uses: cargo-bins/cargo-binstall@main
-
       - name: Install cargo-shear
         run: cargo binstall --no-confirm cargo-shear
-
       - name: Run cargo shear
         run: cargo shear
