--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -19,10 +19,8 @@ jobs:
     timeout-minutes: 30
     steps:
       - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@master
-        # Need to specify @master above to work with toolchain var
-        with:
-          toolchain: 1.89.0
+      - name: Install rust-toolchain.toml
+        run: rustup toolchain install
       - uses: Swatinem/rust-cache@v2
         with:
           cache-on-failure: true
