--- a/.github/workflows/release-profile.yml
+++ b/.github/workflows/release-profile.yml
@@ -38,10 +38,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: rui314/setup-mold@v1
-      - uses: dtolnay/rust-toolchain@stable
-        with:
-          targets: x86_64-unknown-linux-gnu
-
+      - name: Install rust-toolchain.toml
+        run: rustup toolchain install
       - name: Build profiling binary
         run: cargo build --profile profiling --target x86_64-unknown-linux-gnu --locked
 
