--- a/.github/workflows/release-profile.yml
+++ b/.github/workflows/release-profile.yml
@@ -38,10 +38,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: rui314/setup-mold@v1
-      - uses: dtolnay/rust-toolchain@stable
+      - name: Install rust-toolchain.toml
+        run: rustup toolchain install
+      - uses: Swatinem/rust-cache@v2
         with:
-          targets: x86_64-unknown-linux-gnu
-
+          cache-on-failure: true
+          key: profiling
       - name: Build profiling binary
         run: cargo build --profile profiling --target x86_64-unknown-linux-gnu --locked
 
