--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "flowproxy"
-version = "1.2.1"
+version = "1.3.0"
 edition = "2021"
 publish = false
 build = "build.rs"
@@ -42,8 +42,8 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
 
 # metrics
-prometric = { version = "0.1.4", features = ["process"] }
-prometric-derive = { version = "0.1.4" }
+prometric = { version = "0.2.0", features = ["process"] }
+prometric-derive = { version = "0.2.0" }
 prometheus = "0.14.0"
 
 # indexing
@@ -69,8 +69,6 @@ axum = { version = "0.8", default-features = false, features = [
 ] }
 wyhash = "0.6.0"
 mime = "0.3"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
 clap = { version = "4", features = ["derive", "env"] }
 eyre = "0.6"
 thiserror = "2"
@@ -85,6 +83,18 @@ rand = "0.9.2"
 derive_more = { version = "2", features = ["deref"] }
 fdlimit = "0.3.0"
 rayon = "1.11.0"
+
+# serialization
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+bitcode = { version = "0.6.7", features = ["serde"] }
+
+# networking
+msg-transport = { git = "https://github.com/chainbound/msg-rs", tag = "v0.1.3", features = [
+  "tcp-tls"
+] }
+msg-socket = { git = "https://github.com/chainbound/msg-rs", tag = "v0.1.3" }
+openssl = { version = "0.10.75" }
 
 [dev-dependencies]
 tempfile = { version = "3.23.0" }
