--- a/Cargo.toml
+++ b/Cargo.toml
@@ -80,7 +80,7 @@ strum = "0.27"
 strum_macros = "0.27"
 mini-moka = "0.10.3"
 rand = "0.9.2"
-derive_more = { version = "2", features = ["deref"] }
+derive_more = { version = "2", features = ["deref", "from", "into"] }
 fdlimit = "0.3.0"
 rayon = "1.11.0"
 
