--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,16 +7,17 @@ build = "build.rs"
 
 [dependencies]
 # alloy
-alloy-primitives = { version = "1.3.1", features = ["serde", "rand"] }
+alloy-primitives = { version = "1.4.1", features = ["serde", "rand"] }
 alloy-rlp = "0.3.12"
-alloy-consensus = { version = "1.0.32", features = ["k256", "serde"] }
-alloy-eips = "1.0.32"
-alloy-signer = "1.0.32"
-alloy-signer-local = "1.0.32"
+alloy-hardforks = "0.4.4"
+alloy-consensus = { version = "1.0.41", features = ["k256", "serde"] }
+alloy-eips = "1.0.41"
+alloy-signer = "1.0.41"
+alloy-signer-local = "1.0.41"
 
 # revm
-revm-primitives = { version = "20.2.1", default-features = false }
-revm-interpreter = { version = "25.0.2", default-features = false }
+revm-primitives = { version = "21.0.2", default-features = false }
+revm-interpreter = { version = "29.0.1", default-features = false }
 
 # rbuilder
 rbuilder-primitives = { git = "https://github.com/flashbots/rbuilder", rev = "332b00ceeb960cfa27278c020f0f8b299f928982" }
