--- a/tests/testdata/haproxy.cfg
+++ b/tests/testdata/haproxy.cfg
@@ -46,19 +46,12 @@ defaults
 #   default_backend user_of
 
 frontend system
-  # CHANGE: Allow connections without SNI (IP access) by removing strict-sni
-  bind *:5544 ssl crt /usr/local/etc/haproxy/certs/
-
-  http-request return status 200 content-type application/json string '{"system_api_port": 5554}' if { path /infoz }
-
-  default_backend system_of
-
-frontend system2
   mode tcp
   log global
   option tcplog
-  bind *:5554 ssl crt /usr/local/etc/haproxy/certs/
-  default_backend system2_backend
+  # NOTE: for tests, IPv6 is intended and more friendly to localhost DNS resolution.
+  bind [::]:5544 ssl crt /usr/local/etc/haproxy/certs/
+  default_backend system_of
 
 # frontend prometheus
 #   bind 0.0.0.0:8405
@@ -77,14 +70,13 @@ frontend system2
 #   server user_of1 127.0.0.1:5543 check inter 5s fall 3 rise 1
 
 backend system_of
-  http-reuse always
-
-  option httpchk GET /livez
-  http-check expect status 200
-  server system_of1 127.0.0.1:5542 check inter 5s fall 3 rise 1
-
-backend system2_backend
   mode tcp
   log global
-#   server system2_server 127.0.0.1:5552 check inter 5s fall 3 rise 1
-  server system2_server 127.0.0.1:5552
+  option tcp-check
+  option log-health-checks
+
+  # Send: 02 00 00 00 00 00 00 00 00 04 50 49 4E 47
+  # (The final bytes 50 49 4E 47 are ASCII for "PING")
+  tcp-check send-binary 0200000000000000000450494E47
+  tcp-check expect rstring PONG
+  server system_server 127.0.0.1:5542 check inter 5s fall 3 rise 1
